--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bloco de Anotações</string>
+    <string name="minhas_notas">Minhas notas</string>
+    <string name="adicionar_nova_nota">Adicionar nova nota</string>
 </resources>
